--- a/pom.xml
+++ b/pom.xml
@@ -677,17 +677,11 @@
 			<optional>false</optional>
 		</dependency>
 		<dependency>
-			<groupId>xmlrpc</groupId>
+			<groupId>org.apache.xmlrpc</groupId>
 			<artifactId>xmlrpc-client</artifactId>
-			<version>3.0</version>
+			<version>3.1.3</version>
 			<type>jar</type>
 			<optional>false</optional>
-			<exclusions>
-				<exclusion>
-					<groupId>xml-apis</groupId>
-					<artifactId>xml-apis</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 
 		<dependency>
