Using UTF-8 enconding for properties files
Using UTF-8 over ISO-8859-1 as it is the encoding currently in use for legacy project files still in use for testing upgrade from 1.x to 2.x.

--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.3.1</version>
 				<configuration>
-					<propertiesEncoding>ISO-8859-1</propertiesEncoding><!-- To avoid warning during plugin execution. The project currently doesn't include properties files. -->
+					<propertiesEncoding>UTF-8</propertiesEncoding><!-- To avoid warning during plugin execution. -->
 				</configuration>
 			</plugin>
 
