add a create/update/changeId/delete posthook (#193)

--- a/src/main/java/org/lsc/configuration/.gitignore
+++ b/src/main/java/org/lsc/configuration/.gitignore
@@ -4,6 +4,7 @@
 /AuditType.java
 /AuditsType.java
 /ConditionsType.java
+/HooksType.java
 /ConnectionType.java
 /ConnectionsType.java
 /CsvAuditType.java
