Use new ForgeRock repository URL
According to https://backstage.forgerock.com/knowledge/kb/article/a53108595, ForgeRock URL changed from https://maven.forgerock.org/repo/ to https://maven.forgerock.org/artifactory/.
Use the new URL in the pom.xml.

--- a/pom.xml
+++ b/pom.xml
@@ -630,7 +630,7 @@
 		<repository>
                         <id>forgerock-community-repository</id>
                         <name>ForgeRock CommunityRepository</name>
-                        <url>https://maven.forgerock.org/repo/community</url>
+                        <url>https://maven.forgerock.org/artifactory/community</url>
                 </repository>
 		<repository>
 			<id>oracleReleases</id>
