--- a/src/install/debian/control
+++ b/src/install/debian/control
@@ -10,10 +10,15 @@ Vcs-Browser: https://github.com/lsc-project/lsc
 
 Package: lsc
 Architecture: all
-Depends: ${misc:Depends}
+Depends: cron, ${misc:Depends}
 Description: LDAP Synchronization Connector
  LSC offers a powerful transformation engine, based on a scripting language, 
  to easily manipulate data on the fly. Various identity management functions 
  are included for directory-specific compatibility - most notably Active Directory
  (changing passwords, account status, last logon, etc ...). LSC is an open source
  project written in Java, available under the BSD license.
+
+Package: nagios-plugins-lsc
+Architecture: all
+Depends: ${perl:Depends}
+Description: Nagios plugins to check lsc
