--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,3 +45,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B -Popendj package --file pom.xml
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B -Popendj package --file pom.xml
