--- a/src/install/lib/systemd/system/lsc-async@.service
+++ b/src/install/lib/systemd/system/lsc-async@.service
@@ -3,7 +3,7 @@ Description=LSC server for specific instance %I
 After=network.target
 
 [Service]
-Type=forking
+Type=simple
 User=lsc
 Group=lsc
 PIDFile=/var/run/lsc.pid
