Add lsc-sync timer template

--- a/src/install/debian/rules
+++ b/src/install/debian/rules
@@ -15,6 +15,7 @@ override_dh_testdir:
 	cp -f lib/systemd/system/lsc-sync.service debian/
 	cp -f lib/systemd/system/lsc-sync.timer debian/
 	cp -f lib/systemd/system/lsc-sync@.service debian/
+	cp -f lib/systemd/system/lsc-sync@.timer debian/
 	cp -f etc/default/lsc-async debian/lsc-async.default
 	cp -f etc/default/lsc-sync debian/lsc-sync.default
 	dh_testdir
@@ -25,6 +26,7 @@ override_dh_installsystemd:
 	dh_installsystemd --no-start --no-enable --no-stop-on-upgrade --name=lsc-sync
 	dh_installsystemd --no-start --no-enable --no-stop-on-upgrade --name=lsc-sync@
 	dh_installsystemd --name=lsc-sync.timer
+	dh_installsystemd --name=lsc-sync@.timer
 
 
 override_dh_install:
