--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,7 @@
 					<execution>
 						<phase>package</phase>
 						<goals>
+							<goal>directory-single</goal>
 							<goal>single</goal>
 						</goals>
 					</execution>
@@ -254,7 +255,7 @@
 
 				<!-- common configuration by all executions -->
 				<configuration>
-					<baseDir>${project.basedir}</baseDir>
+					<baseDir>${project.build.directory}/${project.build.finalName}-dist/lsc-${project.version}</baseDir>
 					<installFile>${project.basedir}/src/install/install.xml</installFile>
 					<mkdirs>true</mkdirs>
 					<finalName>${project.artifactId}-${project.version}-installer.jar</finalName>
