--- a/pom.xml
+++ b/pom.xml
@@ -308,11 +308,11 @@
 				</executions>
 				<configuration>
 					<episode>true</episode>
-					<episodeFile>${basedir}/lsc.episode</episodeFile>
-					<generateDirectory>src/main/java</generateDirectory>
 					<generatePackage>org.lsc.configuration</generatePackage>
 					<bindingDirectory>src/main/resources/schemas</bindingDirectory>
-					<bindingIncludes><bindingInclude>lsc-core-2.2.xjc</bindingInclude></bindingIncludes>
+					<bindingIncludes>
+						<bindingInclude>lsc-core-2.2.xjc</bindingInclude>
+					</bindingIncludes>
 					<schemaDirectory>src/main/resources/schemas</schemaDirectory>
 					<schemaIncludes>
 						<schemaInclude>lsc-core-2.2.xsd</schemaInclude>
