--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<staging.dir>${project.build.directory}/staging</staging.dir>
 		<jmockit-version>1.5</jmockit-version>
-		<graalvm.version>22.3.1</graalvm.version>
-		<jackson.version>2.12.7.1</jackson.version>
+		<graalvm.version>22.3.5</graalvm.version>
 		<compiler.dir>${project.build.directory}/compiler</compiler.dir>
 	</properties>
 
@@ -256,10 +255,9 @@
 				<!-- common configuration by all executions -->
 				<configuration>
 					<baseDir>${project.build.directory}/${project.build.finalName}-dist/lsc-${project.version}</baseDir>
-					<installFile>src/install/install.xml</installFile>
+					<installFile>${project.basedir}/src/install/install.xml</installFile>
 					<mkdirs>true</mkdirs>
 					<finalName>${project.artifactId}-${project.version}-installer.jar</finalName>
-					<enableAttachArtifact>false</enableAttachArtifact>
 					<autoIncludeUrl>true</autoIncludeUrl>
 				</configuration>
 
@@ -309,11 +307,11 @@
 				</executions>
 				<configuration>
 					<episode>true</episode>
-					<episodeFile>${basedir}/lsc.episode</episodeFile>
-					<generateDirectory>src/main/java</generateDirectory>
 					<generatePackage>org.lsc.configuration</generatePackage>
 					<bindingDirectory>src/main/resources/schemas</bindingDirectory>
-					<bindingIncludes><bindingInclude>lsc-core-2.2.xjc</bindingInclude></bindingIncludes>
+					<bindingIncludes>
+						<bindingInclude>lsc-core-2.2.xjc</bindingInclude>
+					</bindingIncludes>
 					<schemaDirectory>src/main/resources/schemas</schemaDirectory>
 					<schemaIncludes>
 						<schemaInclude>lsc-core-2.2.xsd</schemaInclude>
@@ -696,7 +694,7 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.11.0</version>
+			<version>2.16.1</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
@@ -710,7 +708,7 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>1.2</version>
+			<version>1.3.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
@@ -722,7 +720,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>2.0.9</version>
+			<version>2.0.16</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
@@ -750,7 +748,7 @@
 		<dependency>
 			<groupId>org.mozilla</groupId>
 			<artifactId>rhino</artifactId>
-			<version>1.7.14</version>
+			<version>1.7.15</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
@@ -762,21 +760,21 @@
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk18on</artifactId>
-			<version>1.75</version>
+			<version>1.78.1</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
-			<version>1.5.0</version>
+			<version>1.9.0</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.samba.jcifs</groupId>
+			<groupId>jcifs</groupId>
 			<artifactId>jcifs</artifactId>
-			<version>1.3.3</version>
+			<version>1.3.17</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
@@ -802,7 +800,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<version>4.13.2</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
@@ -814,7 +812,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>32.0.0-jre</version>
+			<version>33.3.0-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.transaction</groupId>
@@ -830,19 +828,19 @@
                     jaxb 2.3.6 with maven-jaxb2-plugin 0.15.1
                 -->
 		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.3.1</version>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+			<version>2.3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-core</artifactId>
-			<version>2.3.0.1</version>
+			<version>3.0.0</version>
 	        </dependency>
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
-			<version>2.3.6</version>
+			<version>4.0.5</version>
 	        </dependency>
 		<dependency>
 			<groupId>net.java.xadisk</groupId>
@@ -850,9 +848,9 @@
 			<version>1.2.2</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.resource</groupId>
-			<artifactId>connector-api</artifactId>
-			<version>1.5</version>
+			<groupId>jakarta.resource</groupId>
+			<artifactId>jakarta.resource-api</artifactId>
+			<version>2.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.btm</groupId>
@@ -860,24 +858,25 @@
 			<version>2.1.4</version>
 		</dependency>
 		<dependency>
-			<groupId>org.codehaus.groovy</groupId>
+			<groupId>org.apache.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>2.4.21</version>
+			<version>4.0.22</version>
+			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.directory.api</groupId>
 			<artifactId>api-all</artifactId>
-			<version>2.1.3</version>
+			<version>2.1.7</version>
 		</dependency>
 		<dependency>
 			<groupId>xml-apis</groupId>
 			<artifactId>xml-apis</artifactId>
-			<version>1.4.01</version>
+			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
+			<version>2.17.2</version>
 		</dependency>
 	</dependencies>
 
