--- a/pom.xml
+++ b/pom.xml
@@ -508,6 +508,27 @@
 					<version>${graalvm.version}</version>
 					<scope>runtime</scope>
 				</dependency>
+				<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+				<dependency>
+					<groupId>com.sun.xml.bind</groupId>
+					<artifactId>jaxb-core</artifactId>
+					<version>2.3.0.1</version>
+				</dependency>
+				<dependency>
+					<groupId>javax.xml.bind</groupId>
+					<artifactId>jaxb-api</artifactId>
+					<version>2.3.1</version>
+				</dependency>
+				<dependency>
+					<groupId>com.sun.xml.bind</groupId>
+					<artifactId>jaxb-impl</artifactId>
+					<version>2.3.1</version>
+				</dependency>
+				<dependency>
+					<groupId>org.javassist</groupId>
+					<artifactId>javassist</artifactId>
+					<version>3.25.0-GA</version>
+				</dependency>
 			</dependencies>
 		</profile>
 
