--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,17 @@
 					</argLine>
 					<workingDirectory>${project.build.testOutputDirectory}</workingDirectory>
 				</configuration>
+				<!--
+					Force surefire provider to junit4
+					as surefire-junit-platform does not correctly detect tests
+				-->
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit4</artifactId>
+						<version>3.5.2</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
