fix slow performance on graalvm with jdk11 (#322)
This fixes the warning: The polyglot context is using an implementation that does not support runtime compilation.

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
 		<staging.dir>${project.build.directory}/staging</staging.dir>
 		<jmockit-version>1.7</jmockit-version>
 		<graalvm.version>22.3.5</graalvm.version>
+		<graaljs.version>24.1.1</graaljs.version>
 		<compiler.dir>${project.build.directory}/compiler</compiler.dir>
 	</properties>
 
@@ -483,32 +484,15 @@
 			</properties>
 			<dependencies>
 				<dependency>
-					<groupId>org.graalvm.sdk</groupId>
-					<artifactId>graal-sdk</artifactId>
-					<version>${graalvm.version}</version>
+					<groupId>org.graalvm.polyglot</groupId>
+					<artifactId>polyglot</artifactId>
+					<version>${graaljs.version}</version>
 				</dependency>
 				<dependency>
-					<groupId>org.graalvm.js</groupId>
-					<artifactId>js</artifactId>
-					<version>${graalvm.version}</version>
-					<scope>runtime</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.js</groupId>
-					<artifactId>js-scriptengine</artifactId>
-					<version>${graalvm.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.tools</groupId>
-					<artifactId>profiler</artifactId>
-					<version>${graalvm.version}</version>
-					<scope>runtime</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.tools</groupId>
-					<artifactId>chromeinspector</artifactId>
-					<version>${graalvm.version}</version>
-					<scope>runtime</scope>
+					<groupId>org.graalvm.polyglot</groupId>
+					<artifactId>js-community</artifactId>
+					<version>${graaljs.version}</version>
+					<type>pom</type>
 				</dependency>
 				<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
 				<dependency>
