--- a/pom.xml
+++ b/pom.xml
@@ -541,16 +541,16 @@
 				</dependency>
 			</dependencies>
 			<build>
-                          <resources>
-                            <resource>
-                              <directory>src/main/resources-filtered</directory>
-                              <filtering>true</filtering>
-                            </resource>
-                            <resource>
-                              <directory>src/main/resources</directory>
-                              <filtering>false</filtering>
-                            </resource>
-                          </resources>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources-filtered</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>false</filtering>
+                    </resource>
+                </resources>
 				<plugins>
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
@@ -644,10 +644,10 @@
 			<url>https://download.java.net/maven/2</url>
 		</repository>
 		<repository>
-                        <id>forgerock-community-repository</id>
-                        <name>ForgeRock CommunityRepository</name>
-                        <url>https://maven.forgerock.org/artifactory/community</url>
-                </repository>
+            <id>forgerock-community-repository</id>
+            <name>ForgeRock CommunityRepository</name>
+            <url>https://maven.forgerock.org/artifactory/community</url>
+        </repository>
 		<repository>
 			<id>oracleReleases</id>
 			<name>Oracle Released Java Packages</name>
@@ -705,6 +705,12 @@
 			<version>3.1.3</version>
 			<type>jar</type>
 			<optional>false</optional>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
 		</dependency>
 
 		<dependency>
@@ -813,13 +819,13 @@
 			<version>${jmockit-version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.13.2</version>
 			<type>jar</type>
 			<optional>false</optional>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
@@ -878,12 +884,34 @@
 			<artifactId>groovy-all</artifactId>
 			<version>4.0.22</version>
 			<type>pom</type>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-platform-launcher</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-platform-engine</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-jupiter-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-jupiter-engine</artifactId>
+                </exclusion>
+            </exclusions>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>org.apache.directory.api</groupId>
 			<artifactId>api-all</artifactId>
 			<version>2.1.7</version>
-		</dependency>
+		<dependency-->
 		<dependency>
 			<groupId>xml-apis</groupId>
 			<artifactId>xml-apis</artifactId>
@@ -894,6 +922,62 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.17.2</version>
 		</dependency>
+		
+		<!-- ApacheDS dependencies -->
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-core-annotations</artifactId>
+            <version>2.0.0.AM28-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-server-annotations</artifactId>
+            <version>2.0.0.AM28-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-core-api</artifactId>
+            <version>2.0.0.AM28-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-i18n</artifactId>
+            <version>2.0.0.AM28-SNAPSHOT</version>
+        </dependency>
+    
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-protocol-ldap</artifactId>
+            <version>2.0.0.AM28-SNAPSHOT</version>
+        </dependency>
+    
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-protocol-shared</artifactId>
+            <version>2.0.0.AM28-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-core-integ</artifactId>
+            <version>2.0.0.AM28-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-test-framework</artifactId>
+            <version>2.0.0.AM28-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+            <version>5.11.0</version>
+        </dependency>
 	</dependencies>
 
 	<distributionManagement>
