--- a/pom.xml
+++ b/pom.xml
@@ -813,12 +813,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>com.googlecode.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
 			<version>${jmockit-version}</version>
 			<scope>test</scope>
-		</dependency>
+		<dependency-->
 		<dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
