--- a/pom.xml
+++ b/pom.xml
@@ -946,49 +946,49 @@
         <dependency>
             <groupId>org.apache.directory.server</groupId>
             <artifactId>apacheds-core-annotations</artifactId>
-            <version>2.0.0.AM28-SNAPSHOT</version>
+            <version>2.0.0.AM27</version>
         </dependency>
         
         <dependency>
             <groupId>org.apache.directory.server</groupId>
             <artifactId>apacheds-server-annotations</artifactId>
-            <version>2.0.0.AM28-SNAPSHOT</version>
+            <version>2.0.0.AM27</version>
         </dependency>
         
         <dependency>
             <groupId>org.apache.directory.server</groupId>
             <artifactId>apacheds-core-api</artifactId>
-            <version>2.0.0.AM28-SNAPSHOT</version>
+            <version>2.0.0.AM27</version>
         </dependency>
         
         <dependency>
             <groupId>org.apache.directory.server</groupId>
             <artifactId>apacheds-i18n</artifactId>
-            <version>2.0.0.AM28-SNAPSHOT</version>
+            <version>2.0.0.AM27</version>
         </dependency>
     
         <dependency>
             <groupId>org.apache.directory.server</groupId>
             <artifactId>apacheds-protocol-ldap</artifactId>
-            <version>2.0.0.AM28-SNAPSHOT</version>
+            <version>2.0.0.AM27</version>
         </dependency>
     
         <dependency>
             <groupId>org.apache.directory.server</groupId>
             <artifactId>apacheds-protocol-shared</artifactId>
-            <version>2.0.0.AM28-SNAPSHOT</version>
+            <version>2.0.0.AM27</version>
         </dependency>
         
         <dependency>
             <groupId>org.apache.directory.server</groupId>
             <artifactId>apacheds-core-integ</artifactId>
-            <version>2.0.0.AM28-SNAPSHOT</version>
+            <version>2.0.0.AM27</version>
         </dependency>
         
         <dependency>
             <groupId>org.apache.directory.server</groupId>
             <artifactId>apacheds-test-framework</artifactId>
-            <version>2.0.0.AM28-SNAPSHOT</version>
+            <version>2.0.0.AM27</version>
         </dependency>
 
         <dependency>
