--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<staging.dir>${project.build.directory}/staging</staging.dir>
 		<jmockit-version>1.7</jmockit-version>
-		<graalvm.version>22.3.5</graalvm.version>
+		<graalvm.version>23.0.7</graalvm.version>
 		<compiler.dir>${project.build.directory}/compiler</compiler.dir>
 	</properties>
 
@@ -487,13 +487,13 @@
 				<dependency>
 					<groupId>org.graalvm.tools</groupId>
 					<artifactId>profiler</artifactId>
-					<version>${graalvm.version}</version>
+					<version>23.0.7</version>
 					<scope>runtime</scope>
 				</dependency>
 				<dependency>
 					<groupId>org.graalvm.tools</groupId>
 					<artifactId>chromeinspector</artifactId>
-					<version>${graalvm.version}</version>
+					<version>23.0.7</version>
 					<scope>runtime</scope>
 				</dependency>
 				<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
