--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
 		directories.
 	</description>
 	<url>https://lsc-project.org/</url>
+
+	<prerequisites>
+		<maven>3.8.0</maven>
+	</prerequisites>
+
 	<issueManagement>
 		<system>github</system>
 		<url>https://github.com/lsc-project/lsc/issues</url>
@@ -155,7 +160,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
+				<version>3.13.0</version>
 				<configuration>
 					<source>8</source>
 					<target>8</target>
