--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,12 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<staging.dir>${project.build.directory}/staging</staging.dir>
 		<jmockit-version>1.7</jmockit-version>
-		<graalvm.version>23.0.7</graalvm.version>
-		<graaljs.version>24.1.1</graaljs.version>
+		<graalvm.tools.version>23.0.7</graalvm.tools.version>
+		<graalvm.js.version>23.0.7</graalvm.js.version>
+		<graalvm.compiler.version>23.0.7</graalvm.compiler.version>
+		<graalvm.truffle.version>23.0.7</graalvm.truffle.version>
+		<graalvm.sdk.version>23.0.7</graalvm.sdk.version>
+		<graalvm.polyglot.version>24.1.2</graalvm.polyglot.version>
 		<compiler.dir>${project.build.directory}/compiler</compiler.dir>
 	</properties>
 
@@ -122,7 +126,7 @@
 								<artifactItem>
 									<groupId>org.graalvm.compiler</groupId>
 									<artifactId>compiler</artifactId>
-									<version>${graalvm.version}</version>
+									<version>${graalvm.compiler.version}</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
 									<destFileName>compiler.jar</destFileName>
@@ -130,7 +134,7 @@
 								<artifactItem>
 									<groupId>org.graalvm.compiler</groupId>
 									<artifactId>compiler-management</artifactId>
-									<version>${graalvm.version}</version>
+									<version>${graalvm.compiler.version}</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
 									<destFileName>compiler-management.jar</destFileName>
@@ -138,7 +142,7 @@
 								<artifactItem>
 									<groupId>org.graalvm.truffle</groupId>
 									<artifactId>truffle-api</artifactId>
-									<version>${graalvm.version}</version>
+									<version>${graalvm.truffle.version}</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
 									<destFileName>truffle-api.jar</destFileName>
@@ -146,7 +150,7 @@
 								<artifactItem>
 									<groupId>org.graalvm.sdk</groupId>
 									<artifactId>graal-sdk</artifactId>
-									<version>${graalvm.version}</version>
+									<version>${graalvm.sdk.version}</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
 									<destFileName>graal-sdk.jar</destFileName>
@@ -477,30 +481,30 @@
 				<dependency>
 					<groupId>org.graalvm.js</groupId>
 					<artifactId>js</artifactId>
-					<version>${graalvm.version}</version>
+					<version>${graalvm.js.version}</version>
 					<scope>runtime</scope>
 				</dependency>
 				<dependency>
 					<groupId>org.graalvm.js</groupId>
 					<artifactId>js-scriptengine</artifactId>
-					<version>${graalvm.version}</version>
+					<version>${graalvm.js.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.graalvm.tools</groupId>
 					<artifactId>profiler</artifactId>
-					<version>23.0.7</version>
+					<version>${graalvm.tools.version}</version>
 					<scope>runtime</scope>
 				</dependency>
 				<dependency>
 					<groupId>org.graalvm.tools</groupId>
 					<artifactId>chromeinspector</artifactId>
-					<version>23.0.7</version>
+					<version>${graalvm.tools.version}</version>
 					<scope>runtime</scope>
-        </dependency>
-        <dependency>
+				</dependency>
+				<dependency>
 					<groupId>org.graalvm.polyglot</groupId>
 					<artifactId>js-community</artifactId>
-					<version>${graaljs.version}</version>
+					<version>${graalvm.polyglot.version}</version>
 					<type>pom</type>
 				</dependency>
 				<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
