--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,15 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B -Popendj package --file pom.xml
-    - name: Set up JDK 8
-      uses: actions/setup-java@v4
-      with:
-        java-version: '8'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B -Popendj package --file pom.xml
+      run: mvn -B package --file pom.xml
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -44,7 +36,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B -Popendj package --file pom.xml
+      run: mvn -B package --file pom.xml
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
@@ -52,4 +44,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B -Popendj package --file pom.xml
+      run: mvn -B package --file pom.xml
