--- a/src/install/lib/systemd/system/lsc-async@.service
+++ b/src/install/lib/systemd/system/lsc-async@.service
@@ -12,6 +12,7 @@ Environment="LSC_ASYNC_TASKS=-a all"
 Environment="LSC_EXTRA_ARGS="
 Environment="LSC_JMXPORT="
 EnvironmentFile=-/etc/default/lsc-%i
+WorkingDirectory=/var/lib/lsc
 ExecStartPre=/usr/bin/lsc -v -f ${LSC_CONFIG_DIR}
 ExecStart=/usr/bin/lsc -f ${LSC_CONFIG_DIR} ${LSC_ASYNC_TASKS} ${LSC_EXTRA_ARGS}
 
