add WorkingDirectory in lsc service files (#413)

--- a/src/install/lib/systemd/system/lsc-async.service
+++ b/src/install/lib/systemd/system/lsc-async.service
@@ -22,6 +22,7 @@ ProtectKernelTunables=yes
 ProtectControlGroups=yes
 ReadWritePaths=/var/log/lsc
 UMask=0007
+WorkingDirectory=/var/lib/lsc
 
 [Install]
 WantedBy=multi-user.target
